test/corpus/regexp.txt
================================================================================
Regexp
================================================================================

regexp {\d} $var m b

--------------------------------------------------------------------------------

(source_file
  (regexp
    (braced_word_simple
        (escaped_character))
    (variable_substitution
      (id))
    (simple_word)
    (simple_word)))

================================================================================
regexp -nocase single switch
================================================================================

regexp -nocase {\d+} $str m

--------------------------------------------------------------------------------

(source_file
  (regexp
    (braced_word_simple
      (escaped_character)
      (simple_word))
    (variable_substitution
      (id))
    (simple_word)))

================================================================================
regexp -nocase -all -- multiple switches with end-of-options
================================================================================

regexp -nocase -all -- {\d+} $str m

--------------------------------------------------------------------------------

(source_file
  (regexp
    (braced_word_simple
      (escaped_character)
      (simple_word))
    (variable_substitution
      (id))
    (simple_word)))

================================================================================
regexp -start with index argument
================================================================================

regexp -start 5 {\d+} $str

--------------------------------------------------------------------------------

(source_file
  (regexp
    (simple_word)
    (braced_word_simple
      (escaped_character)
      (simple_word))
    (variable_substitution
      (id))))

================================================================================
regexp -all -inline without match variables
================================================================================

regexp -all -inline {\w+} $str

--------------------------------------------------------------------------------

(source_file
  (regexp
    (braced_word_simple
      (escaped_character)
      (simple_word))
    (variable_substitution
      (id))))

================================================================================
regexp -indices -nocase with multiple match variables
================================================================================

regexp -indices -nocase {\d+} $str matchInfo subMatch1

--------------------------------------------------------------------------------

(source_file
  (regexp
    (braced_word_simple
      (escaped_character)
      (simple_word))
    (variable_substitution
      (id))
    (simple_word)
    (simple_word)))

================================================================================
regexp -- ends options for a switch-shaped pattern
================================================================================

regexp -- -nocase $s

--------------------------------------------------------------------------------

(source_file
  (regexp
    (simple_word)
    (variable_substitution
      (id))))

================================================================================
regexp -- with -- as the literal pattern
================================================================================

regexp -all -- -- $s

--------------------------------------------------------------------------------

(source_file
  (regexp
    (simple_word)
    (variable_substitution
      (id))))

================================================================================
regexp switch before -- and switch-shaped pattern after
================================================================================

regexp -nocase -- -line $s

--------------------------------------------------------------------------------

(source_file
  (regexp
    (simple_word)
    (variable_substitution
      (id))))

================================================================================
regexp -- with a non-switch dash pattern (boundary)
================================================================================

regexp -- -foo $s

--------------------------------------------------------------------------------

(source_file
  (regexp
    (simple_word)
    (variable_substitution
      (id))))

================================================================================
regexp -line composite switch
================================================================================

regexp -line {\d+} $str m

--------------------------------------------------------------------------------

(source_file
  (regexp
    (braced_word_simple
      (escaped_character)
      (simple_word))
    (variable_substitution
      (id))
    (simple_word)))
